# FlexAIDdS

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml  ci.yml  cmake-multi-platform.yml  cmake-single-platform.yml  update-site.yml
LIB/: BindingMode.cpp  BindingMode.h  CifReader.cpp  CifReader.h  DensityPeak_Cluster.cpp  FOPTICS.cpp  FastOPTICS_cluster.cpp  ParallelDock.cpp  calc_rmsd.cpp  config_defaults.h  config_parser.cpp  cuda_eval.cu  cuda_eval.cuh  encom.cpp  encom.h  fast_optics.cpp  flexaid.h  gaboom.cpp  gaboom.h  generate_grid.cpp  ic2cf.cpp  maps.hpp  metal_eval.h  metal_eval.mm  partition_grid.cpp  read_input.cpp  simd_distance.h  slice_grid.cpp  statmech.cpp  statmech.h  tencm.cpp  tencm.h  tencom_diff.cpp  tencom_main.cpp  top.cpp
LIB/CavityDetect/: CavityDetect.cpp
LIB/ChiralCenter/: ChiralCenterGene.cpp  ChiralCenterGene.h
LIB/LigandRingFlex/: LigandRingFlex.h  RingConformerLibrary.cpp  RingConformerLibrary.h  SugarPucker.cpp  SugarPucker.h
LIB/NATURaL/: NATURaLDualAssembly.cpp  NATURaLDualAssembly.h
LIB/ShannonThermoStack/: ShannonThermoStack.cpp  ShannonThermoStack.h  shannon_cuda.cu  shannon_cuda.cuh
LIB/tENCoM/: tencm.h
docs/: CODEBASE_OPTIMIZATION_ANALYSIS.md
pymol_plugin/: entropy_heatmap.py  gui.py  itc_comparison.py  mode_animation.py  visualization.py
python/: conftest.py  pyproject.toml  setup.py
python/bindings/: core_bindings.cpp
python/flexaidds/: __init__.py  __main__.py  __version__.py  docking.py  encom.py  energy_matrix.py  energy_matrix_cli.py  io.py  models.py  tencm.py  thermodynamics.py  train_256x256.py
python/tests/: test_cli.py  test_docking.py  test_encom.py  test_energy_matrix.py  test_io.py  test_models.py  test_results_io.py  test_statmech_smoke.py  test_tencm.py  test_train_256x256.py  test_visualization.py
site/: index.html
swift/: Package.swift
swift/Sources/FleetScheduler/: FleetScheduler.swift
swift/Sources/FlexAIDCore/: FXGA.mm
swift/Sources/FlexAIDdS/: DockingRunner.swift
swift/Sources/Intelligence/: IntelligenceOracle.swift  ThermoReferee.swift
tests/: stubs.cpp  test_cube_grid.cpp  test_fast_optics.cpp  test_hardware_dispatch.cpp  test_statmech.cpp  test_tencom_diff.cpp
typescript/apps/viewer/src/: FleetDashboard.tsx  IntelligenceEngine.ts
