[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "pybind11>=2.11",
]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "flexaidds"
dynamic = ["version"]
description = "Entropy-driven molecular docking with flexible side-chains"
readme = {file = "../README.md", content-type = "text/markdown"}
license = {text = "Apache-2.0"}
authors = [
    {name = "Louis-Philippe Morency", email = "lp.morency@umontreal.ca"},
]
keywords = [
    "molecular-docking",
    "drug-discovery",
    "thermodynamics",
    "entropy",
    "cheminformatics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
]

[project.optional-dependencies]
visualization = ["pymol>=2.5"]
analysis = ["pandas>=1.4", "matplotlib>=3.5"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.4",
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.3",
]

[project.urls]
Homepage = "https://github.com/lmorency/FlexAIDdS"
Documentation = "https://flexaidds.readthedocs.io"
Source = "https://github.com/lmorency/FlexAIDdS"
Tracker = "https://github.com/lmorency/FlexAIDdS/issues"

[tool.setuptools.dynamic]
version = {attr = "flexaidds.__version__.__version__"}

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
